# SSHFerry

./: ANACONDA_SETUP.md  README.md  README_zh.md  _check_deps.py  _platform.py  agent.md  pyproject.toml  requirements.txt  run.bat  run.sh  setup_conda_env.ps1  setup_windows.ps1  test_imports.py
.orchids/: orchids.json
.venv_win/: pyvenv.cfg
.venv_win/Scripts/: activate  activate.bat
src/: __init__.py
src/app/: main.py
src/core/: events.py  scheduler.py  task_state.py
src/engines/: __init__.py  mscp_engine.py  parallel_sftp_engine.py  sftp_engine.py
src/services/: connection_checker.py  metrics.py  site_store.py
src/shared/: __init__.py  errors.py  logging_.py  models.py  paths.py
src/ui/: main_window.py
src/ui/panels/: __init__.py  local_panel.py  remote_panel.py  task_center.py
src/ui/widgets/: __init__.py  site_editor.py
tests/: test_connection_checker.py  test_metrics.py  test_parallel_logic.py  test_paths.py  test_recursive_delete.py  test_scheduler_parallel_presets.py  test_sftp_sandbox.py  test_site_store.py  test_task_control.py  test_task_state.py
tools/: benchmark_transfer.py
tools/mscp/: README.md
